ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
10/03/08 Rodrigo Hernandez (Kwizatz)
	* Added Blender script to create ODE convex geoms under tools.

10/01/08 Rodrigo Hernandez (Kwizatz)
	* Convex-Convex collision detection code is finally stable.

08/31/08 Daniel K. O.
        * Applied patch 2080674: Improved dBodySetRotation; now exact rotation
          matrices are preserved until the next simulation step.

08/07/08 Daniel K. O.
        * Fixed strict aliasing issue that was breaking the new trimesh collider.

07/24/08 Daniel K. O.
        * New functions: dBodyGetGyroscopicMode and dBodySetGyroscopicMode
          (patch #2019242).

07/15/08  Remi Ricard (papaDoc)
        * Add a new define ODE_API_DEPRECATED to mark function as deprecated
          when necessary.

07/14/08 Remi Ricard (papaDoc)
        * Finish adding patch 1336066: Joint feedback in quickstep by jsinecky
        * demo_boxstack.cpp can now print joint feedback

07/11/08 Daniel K. O.
        * Bumped version for 0.10.1
        * Added proper usage of libtool's version info.

07/10/08 Remi Ricard (papaDoc)
        * Add new function dJointSetPistonAnchorOffset
        * Add unittest for the piston joint
        * Fix problem with dJointGetPistonPosition and 
          dJointGetPistonPositionRate when the joint is attached to only
          a body 2. The sign was inversed. 

07/09/08 Remi Ricard (papaDoc)
        * Optimize function Multiply1_12q1 in quickstep
          Patch proposed by Riemer v.d. Zee and modified by Patrick Baggett

07/08/08 Remi Ricard (papaDoc)
        * Update the slider joint to have the same behavior as the other joint
          when there is only a body2 attached to it.